# frostwatch

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  frostwatch.yaml.example  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  pr-checks.yml  release.yml  security.yml
api/: index.html
configuration/: index.html
dbt/: index.html
docs/: api.md  configuration.md  dbt.md  index.md  installation.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: AnomalyBadge.tsx  CostChart.tsx  Layout.tsx  MetricCard.tsx  QueryTable.tsx
frontend/src/pages/: Anomalies.tsx  Dashboard.tsx  Dbt.tsx  Queries.tsx  Reports.tsx  Settings.tsx  Warehouses.tsx
frostwatch/: cli.py
frostwatch/alerts/: email.py  slack.py
frostwatch/analysis/: anomaly.py  cost.py  recommendations.py
frostwatch/api/: app.py  models.py
frostwatch/api/routes/: anomalies.py  dashboard.py  dbt.py  queries.py  reports.py  scheduler_routes.py  settings.py  sync.py  warehouses.py
frostwatch/core/: config.py  db.py  scheduler.py
frostwatch/demo/: __init__.py  seed.py
frostwatch/llm/: anthropic_provider.py  base.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py
frostwatch/snowflake/: client.py  queries.py
installation/: index.html
search/: search_index.json
tests/unit/: test_analysis_anomaly.py  test_analysis_cost.py  test_dbt_parsing.py  test_llm_factory.py
