[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "frostwatch"
version = "0.1.7"
description = "AI-powered cost and query observability for Snowflake"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Arun Rajiah", email = "arunrajiah@gmail.com" },
]
maintainers = [
    { name = "Arun Rajiah", email = "arunrajiah@gmail.com" },
]
keywords = [
    "snowflake",
    "observability",
    "cost",
    "analytics",
    "llm",
    "ai",
    "data-engineering",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Monitoring",
    "Typing :: Typed",
]
requires-python = ">=3.11,<4"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "snowflake-connector-python>=3.10",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "apscheduler>=3.10",
    "anthropic>=0.28",
    "openai>=1.30",
    "google-genai>=1.0",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "jinja2>=3.1",
    "aiohttp>=3.9",
    "python-multipart>=0.0.9",
    "slowapi>=0.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "types-PyYAML>=6",
]

[project.urls]
Homepage = "https://github.com/arunrajiah/frostwatch"
Repository = "https://github.com/arunrajiah/frostwatch"
Issues = "https://github.com/arunrajiah/frostwatch/issues"
Changelog = "https://github.com/arunrajiah/frostwatch/blob/main/CHANGELOG.md"
"Docker Image" = "https://ghcr.io/arunrajiah/frostwatch"

[project.scripts]
frostwatch = "frostwatch.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["frostwatch"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["frostwatch"]
omit = ["frostwatch/llm/*_provider.py"]
